--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
-  "main": "main.js",
+  "main": "alloy.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,5 +14,8 @@
     "electron": "^27.0.0",
     "inquirer": "^9.2.11",
     "open": "^9.1.0"
+  },
+  "bin": {
+    "alloy": "./alloy.js"
   }
 }
