--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.5.1",
     "electron": "^27.0.0",
     "inquirer": "^9.2.11",
+    "moment": "^2.30.1",
     "open": "^9.1.0"
   },
   "bin": {
